packages/cli/src/__tests__/fixtures/multi-schema-files/valid/prisma/schema/schema2.prisma
model Link {
  id        String   @id @default(uuid())
  user      User?    @relation(fields: [userId], references: [id])
  userId    String?
}
