packages/cli/src/__tests__/fixtures/multi-schema-files/invalid/invalid_config_blocks/prisma/schema/schema.prisma
model Link {
  id        String   @id @default(uuid())
}
